fixed js to truncate advantages and minor text imprvs

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -1311,3 +1311,14 @@ footer.landing {
     }
   }
 }
+
+div.truncate-2-lines {
+  display: -webkit-box;
+  font-size: 16px;
+  line-height: 28px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;  
+}
+
